--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -2,3 +2,11 @@ A:127.0.0.1
 D:*
 *.sh:/bin/sh
 *.cgi:/bin/haserl
+#.avi:video/x-msvideo
+.avi:video/mp4
+.mkv:video/mp4
+.mpg:video/mp4
+.mp4:video/mp4
+.ts:video/mp4
+.m2ts:video/mp4
+.wmv:video/mp4
